cleanup, can't upload model- too big file

--- a/dermModelFrontend/src/index.html
+++ b/dermModelFrontend/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Your App</title>
+  <title>SmartDerm</title>
   <base href="/" />
 </head>
 <body>
